# MightyMancala

./: .gitignore  Cargo.toml  LICENSE  README.md
RustDocumentation/: Cursive Documentation.md  File Pathing.md
RustDocumentation/.obsidian/: workspace
assets/: help_page.txt
crates_and_paths/: Cargo.toml
crates_and_paths/src/: main.rs  sub.rs
crates_and_paths/src/extra_functions/: mod.rs
cursive_playground/: Cargo.toml
cursive_playground/src/: main.rs
mancala/: Cargo.toml  justfile
mancala-tui/: Cargo.toml  README.md
mancala-tui/assets/: boardSchematic.txt  congrats.txt  help_page.txt  logo.txt
mancala-tui/src/: board.rs  board.txt  game.rs  main.rs  mancala.rs  tests.rs
mancala/src/: board.rs  example.rs  game.rs  main.rs  mancala.rs
mancala/src/extra_functions/: mod.rs
mancala_board_test/: Cargo.toml
mancala_board_test/src/: main.rs
src/: board.rs  mancala.rs
worksheet4/: Cargo.toml
