[package]
name = "mancala-tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cursive = {version = "0.20", default-features = false }
rand = "0.8.5"

[features]
default = ["cursive/crossterm-backend"]

[[bin]]
name = "mancala"
path = "src/main.rs"